objects/VisitOps__Visit_Bundle_Configuration_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>VisitOps__From_SObject_Name__c</fullName>
        <label>From SObject Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Is_Arrival_Date_Time_Location_Occurs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this field is &apos;true&apos;, the field will only update until the Visit Arrival Date/Time occur.</inlineHelpText>
        <label>Is Arrival Date/Time (Location) Occurs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisitOps__Map_From_Field__c</fullName>
        <label>Map From Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Map_To_Field__c</fullName>
        <label>Map To Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__To_SObject_Name__c</fullName>
        <label>To SObject Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Using_In__c</fullName>
        <label>Using In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VisitBundleTrigger</fullName>
                    <default>true</default>
                    <label>VisitBundleTrigger</label>
                </value>
                <value>
                    <fullName>OpportunityTrigger</fullName>
                </value>
                <value>
                    <fullName>VisitBundleAndOpportunityTrigger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Visit Bundle Configuration Setting</label>
    <pluralLabel>Visit Bundle Configuration Settings</pluralLabel>
</CustomObject>